add lots of@Builder.Default annotations for Optional fields - fix all serialization of isCancelable fields by not using the primitive boolean (#45)